[package]
name = "libcm"
version = "0.1.0"
authors = ["jafow <jared.a.fowler@gmail.com>"]
edition = "2018"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-bigint = "0.4"
fastrand = "1.4.0"
num-traits = "0.2.14"
is_prime = "1.0.5"
